--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,5 @@
-gxde-testing-source (1.0.1) UNRELEASED; urgency=medium
+gxde-testing-source (1.1.0) UNRELEASED; urgency=medium
 
-  * Initial release. (Closes: #nnnn)  <nnnn is the bug number of your ITP>
-  * 
+  * 更换URL
 
- -- gfdgd_xi <3025613752@qq.com>  Tue, 20 Aug 2024 10:42:02 +0800
+ -- gfdgd_xi <3025613752@qq.com>  Thu, 14 Nov 2024 18:01:16 +0800
