--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
-gxde-testing-source (1.1.1) UNRELEASED; urgency=medium
+gxde-testing-source (1.1.2) UNRELEASED; urgency=medium
 
   * 更换URL
+  * 新增 Signed-by 字段
 
- -- gfdgd_xi <3025613752@qq.com>  Sun, 22 Dec 2024 08:19:42 +0800
+ -- gfdgd_xi <3025613752@qq.com>  Thu, 23 Jan 2025 08:25:59 +0800
