--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
-gxde-testing-source (1.1.2) UNRELEASED; urgency=medium
+gxde-testing-source (1.1.3) UNRELEASED; urgency=medium
 
   * 更换URL
   * 新增 Signed-by 字段
+  * 移除冲突选项
 
- -- gfdgd_xi <3025613752@qq.com>  Thu, 23 Jan 2025 08:25:59 +0800
+ -- gfdgd_xi <3025613752@qq.com>  Thu, 23 Jan 2025 08:54:27 +0800
