新增山东大学镜像站地址

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,5 @@
-gxde-testing-source (1.1.4) UNRELEASED; urgency=medium
+gxde-testing-source (1.1.5) UNRELEASED; urgency=medium
 
-  * 新增代号：壮壮
+  * 新增山东大学镜像站地址
 
- -- gfdgd_xi <3025613752@qq.com>  Tue, 04 Feb 2025 23:00:09 +0800
+ -- gfdgd_xi <3025613752@qq.com>  Wed, 05 Feb 2025 21:49:18 +0800
